--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-circle-slider": "^1.6.2",
     "react-color": "^2.19.3",
+    "react-confirm-alert": "^3.0.6",
     "react-countdown": "^2.3.6",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -71,6 +72,7 @@
     "reselect": "^5.1.1",
     "sass": "1.77.6",
     "simplebar-react": "^3.2.6",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
     "toastr": "^2.1.4",
     "yet-another-react-lightbox": "^3.21.6",
@@ -105,6 +107,6 @@
     "@types/node": "^22.15.3",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.7",
-    "typescript": "^5.8.3"
+    "typescript": "^4.9.5"
   }
 }
