--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "apexcharts": "^3.54.0",
     "axios": "^1.9.0",
     "axios-mock-adapter": "^2.1.0",
-    "bootstrap": "5.3.3",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -48,6 +48,7 @@
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.1.0",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
@@ -62,6 +63,7 @@
     "react-select": "^5.8.2",
     "react-simple-star-rating": "^5.1.7",
     "react-sparklines": "^1.7.0",
+    "react-spinners": "^0.17.0",
     "react-star-ratings": "^2.3.0",
     "react-switch": "^7.0.0",
     "react-table": "^7.8.0",
@@ -74,6 +76,7 @@
     "simplebar-react": "^3.2.6",
     "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
+    "sweetalert2": "^11.22.0",
     "toastr": "^2.1.4",
     "yet-another-react-lightbox": "^3.21.6",
     "yup": "^1.6.1"
