--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "reselect": "^5.1.1",
     "sass": "1.77.6",
     "simplebar-react": "^3.2.6",
+    "socket.io": "^4.8.1",
     "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.22.0",
