--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^11.0.1",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
+    "jwt-decode": "^4.0.0",
     "lodash.clonedeep": "^4.5.0",
     "metismenujs": "^1.4.0",
     "moment": "^2.30.1",
@@ -75,6 +76,7 @@
     "sass": "1.77.6",
     "simplebar-react": "^3.2.6",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.22.0",
