--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
+    "react-feather": "^2.0.10",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.5.2",
@@ -81,6 +82,7 @@
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.22.0",
     "toastr": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.21.6",
     "yup": "^1.6.1"
   },
