--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "metismenujs": "^1.4.0",
     "moment": "^2.30.1",
@@ -82,6 +83,7 @@
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.22.0",
     "toastr": "^2.1.4",
+    "use-debounce": "^10.0.5",
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.21.6",
     "yup": "^1.6.1"
