--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@react-google-maps/api": "^2.20.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -59,7 +60,7 @@
     "react-modal-video": "^2.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-rating": "^2.0.5",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
