--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "axios-mock-adapter": "^2.1.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "dompurify": "^3.2.6",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "echarts-for-react": "^3.0.2",
     "firebase": "^11.0.1",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
